# OPENVDAP_TEE

./: CMakeLists.txt  README.md  openvdap.edl
common/: ocall_types.h
enclave/: CMakeLists.txt
enclave/include/: message.h  openvdap_aes.h  openvdap_ecdsa.h
enclave/src/: Enclave.cpp  ocall_interface.c  openvdap_ecdh.cpp
enclave/test/: test_aes.cpp
host/: App.cpp  CMakeLists.txt
host/include/: Helper.h  command.h
host/src/: Global.cpp  Helper.cpp
openvdap/: openvdap.conf
openvdap/common/: shared.h
openvdap/enclave/: CMakeLists.txt
openvdap/enclave/include/: dispatcher.h  openvdap_ecp.h
openvdap/enclave/src/: dispatcher.cpp  encryptor.cpp  keys.cpp  openvdap_aes.cpp  openvdap_ecdsa.cpp  openvdap_ecp.cpp
openvdap/enclave/test/: Makefile
openvdap/host/: CMakeLists.txt
openvdap/host/include/: Global.h
openvdap/host/src/: command.cpp  main.cpp  ocalls.cpp
